[gd_scene load_steps=2 format=2]

[ext_resource path="res://entities/VirtualControls/Virtual Controls.gd" type="Script" id=1]

[node name="Virtual Controls" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 1280.0
margin_bottom = 720.0
mouse_filter = 2
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LeftControls" type="GridContainer" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -200.0
margin_right = 300.0
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="LeftControls"]
margin_right = 97.0
margin_bottom = 98.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Up" type="Button" parent="LeftControls"]
margin_left = 101.0
margin_right = 198.0
margin_bottom = 98.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Up"

[node name="Button3" type="Button" parent="LeftControls"]
margin_left = 202.0
margin_right = 299.0
margin_bottom = 98.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Left" type="Button" parent="LeftControls"]
margin_top = 102.0
margin_right = 97.0
margin_bottom = 200.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Left"

[node name="Down" type="Button" parent="LeftControls"]
margin_left = 101.0
margin_top = 102.0
margin_right = 198.0
margin_bottom = 200.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Down"

[node name="Right" type="Button" parent="LeftControls"]
margin_left = 202.0
margin_top = 102.0
margin_right = 299.0
margin_bottom = 200.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Right"

[node name="RightControls" type="GridContainer" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -120.0
margin_top = -120.0
margin_right = -20.0
margin_bottom = -20.0001
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Fire" type="Button" parent="RightControls"]
margin_right = 100.0
margin_bottom = 99.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Fire"
[connection signal="button_down" from="LeftControls/Up" to="." method="_on_Up_button_down"]
[connection signal="button_up" from="LeftControls/Up" to="." method="_on_Up_button_up"]
[connection signal="button_down" from="LeftControls/Left" to="." method="_on_Left_button_down"]
[connection signal="button_up" from="LeftControls/Left" to="." method="_on_Left_button_up"]
[connection signal="button_down" from="LeftControls/Down" to="." method="_on_Down_button_down"]
[connection signal="button_up" from="LeftControls/Down" to="." method="_on_Down_button_up"]
[connection signal="button_down" from="LeftControls/Right" to="." method="_on_Right_button_down"]
[connection signal="button_up" from="LeftControls/Right" to="." method="_on_Right_button_up"]
[connection signal="button_down" from="RightControls/Fire" to="." method="_on_Fire_button_down"]
[connection signal="button_up" from="RightControls/Fire" to="." method="_on_Fire_button_up"]
